GPC/tests/examples/fail/errArith8.gpc

void GPRM::Test::errArith8() {
    return 3 >> 3.0;
}


